--- a/src/style/components/_qa.scss
+++ b/src/style/components/_qa.scss
@@ -49,6 +49,7 @@ section.qa{
       }
       .answer{
         overflow: hidden;
+        line-height: 1.4;
         border: .0625rem solid lightgrey;
         border-top: .5rem solid lightgrey;
         border-radius: 0 0 .5rem .5rem;
