--- a/src/style/ui/_button.scss
+++ b/src/style/ui/_button.scss
@@ -3,6 +3,7 @@
   display: block;
   background: lightgray;
   font-size: 1rem;
+  font-weight: 500;
   border: none;
   border-radius: .5rem;
   padding: 1rem 3rem;
