--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -5,14 +5,15 @@ header{
   transform: translateX(-50%);
   display: flex;
   justify-content: space-between;
-  padding: 1rem;
+  padding-top: 2rem !important;
+  padding-bottom: 2rem !important;
   a{
     color: #fff;
   }
   nav{
     ul{
       display: flex;
-      gap: 1rem;
+      gap: 2.5rem;
     }
   }
 }
