--- a/src/style/index.css
+++ b/src/style/index.css
@@ -13,14 +13,13 @@ html {
 }
 
 :root {
-  --wrapper-padding: 1rem;
+  --wrapper-padding: 5rem;
   --wrapper-max-width: calc(90rem + var(--wrapper-padding));
 }
 
 .wrapper {
   max-width: var(--wrapper-max-width);
-  padding-left: var(--wrapper-padding);
-  padding-right: var(--wrapper-padding);
+  padding: var(--wrapper-padding);
   margin-left: auto;
   margin-right: auto;
 }
@@ -38,11 +37,17 @@ a {
   color: #000;
 }
 
+h1 {
+  font-size: 1.85rem;
+  margin-bottom: 3.5rem;
+}
+
 .btn {
   cursor: pointer;
   display: block;
   background: lightgray;
   font-size: 1rem;
+  font-weight: 500;
   border: none;
   border-radius: 0.5rem;
   padding: 1rem 3rem;
@@ -55,21 +60,39 @@ header {
   transform: translateX(-50%);
   display: flex;
   justify-content: space-between;
-  padding: 1rem;
+  padding-top: 2rem !important;
+  padding-bottom: 2rem !important;
 }
 header a {
   color: #fff;
 }
 header nav ul {
   display: flex;
-  gap: 1rem;
+  gap: 2.5rem;
 }
 
 section.hero {
   background: var(--main);
   color: #fff;
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+}
+section.hero .wrapper {
+  min-height: 100vh;
+  min-height: 100dvh;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+}
+section.hero .wrapper .cont {
+  display: flex;
+  flex-flow: column;
+  gap: 0.5rem;
+}
+section.hero .wrapper .cont h1 {
+  font-size: 2.5rem;
+  margin-bottom: 0.75rem;
+}
+section.hero .wrapper .cont p {
+  max-width: 29rem;
 }
 
 section.plan .grid {
@@ -85,7 +108,7 @@ section.plan .grid .grid-item {
 section.plan .grid .grid-item.left ul {
   display: flex;
   flex-flow: column;
-  gap: 0.5rem;
+  gap: 2rem;
 }
 section.plan .grid .grid-item.left ul li {
   display: flex;
@@ -103,8 +126,13 @@ section.plan .grid .grid-item.left ul li .num {
   border: 0.0625rem solid var(--main);
   border-radius: 50%;
 }
+section.plan .grid .grid-item.center {
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
+}
 section.plan .grid .grid-item.center .num {
-  font-size: 5rem;
+  font-size: 7.5rem;
   font-weight: 700;
   color: var(--main);
 }
@@ -159,6 +187,7 @@ section.qa ul li .question .sign::after {
 }
 section.qa ul li .answer {
   overflow: hidden;
+  line-height: 1.4;
   border: 0.0625rem solid lightgrey;
   border-top: 0.5rem solid lightgrey;
   border-radius: 0 0 0.5rem 0.5rem;
@@ -197,40 +226,46 @@ footer {
 footer a {
   color: #fff;
 }
-footer .grid {
+footer ul.grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+  gap: 1.5rem;
 }
-footer .grid li.map {
+footer ul.grid li.left {
   overflow: hidden;
   position: relative;
 }
-footer .grid li.map iframe {
+footer ul.grid li.left iframe {
   position: relative;
   width: 100%;
   min-height: 20rem;
   height: 100%;
   border: none;
 }
-footer .grid li.center {
+footer ul.grid li.center .about {
   display: flex;
   flex-flow: column;
   justify-content: center;
-  align-items: center;
+  gap: 1.5rem;
 }
-footer .grid li.center p {
+footer ul.grid li.center .about div {
   text-align: center;
 }
-footer .grid li.center .email {
-  text-decoration: underline;
-}
-footer .grid li.center .flex-cont {
+footer ul.grid li.center .about .flex-cont {
   display: flex;
   justify-content: space-between;
 }
-footer .grid li.center .flex-cont .links {
+footer ul.grid li.center .about .flex-cont .links {
   display: flex;
   justify-content: center;
   gap: 0.25rem;
+}
+footer ul.grid li.center p {
+  text-align: center;
+}
+footer ul.grid li.center .email {
+  text-decoration: underline;
+}
+footer ul.grid li.right {
+  background: #aaa;
 }/*# sourceMappingURL=index.css.map */
