--- a/src/style/index.css
+++ b/src/style/index.css
@@ -50,15 +50,15 @@ html {
 }
 @font-face {
   font-family: "HeliosCond";
-  src: url("HeliosCondThinC.eot");
-  src: local("HeliosCondThinC"), url("HeliosCondThinC.eot?#iefix") format("embedded-opentype"), url("HeliosCondThinC.woff2") format("woff2"), url("HeliosCondThinC.woff") format("woff"), url("HeliosCondThinC.ttf") format("truetype");
+  src: url("./ui/fonts/Helios/HeliosCondThinC.eot");
+  src: local("./ui/fonts/Helios/HeliosCondThinC"), url("./ui/fonts/Helios/HeliosCondThinC.eot?#iefix") format("embedded-opentype"), url("./ui/fonts/Helios/HeliosCondThinC.woff2") format("woff2"), url("./ui/fonts/Helios/HeliosCondThinC.woff") format("woff"), url("./ui/fonts/Helios/HeliosCondThinC.ttf") format("truetype");
   font-weight: 100;
   font-style: normal;
 }
 @font-face {
   font-family: "HeliosCond";
-  src: url("HeliosCondThinC-Italic.eot");
-  src: local("HeliosCondThinC Italic"), local("HeliosCondThinC-Italic"), url("HeliosCondThinC-Italic.eot?#iefix") format("embedded-opentype"), url("HeliosCondThinC-Italic.woff2") format("woff2"), url("HeliosCondThinC-Italic.woff") format("woff"), url("HeliosCondThinC-Italic.ttf") format("truetype");
+  src: url("./ui/fonts/Helios/HeliosCondThinC-Italic.eot");
+  src: local("./ui/fonts/Helios/HeliosCondThinC Italic"), local("./ui/fonts/Helios/HeliosCondThinC-Italic"), url("./ui/fonts/Helios/HeliosCondThinC-Italic.eot?#iefix") format("embedded-opentype"), url("./ui/fonts/Helios/HeliosCondThinC-Italic.woff2") format("woff2"), url("./ui/fonts/Helios/HeliosCondThinC-Italic.woff") format("woff"), url("./ui/fonts/Helios/HeliosCondThinC-Italic.ttf") format("truetype");
   font-weight: 100;
   font-style: italic;
 }
@@ -92,15 +92,15 @@ html {
 }
 @font-face {
   font-family: "HeliosCond";
-  src: url("HeliosCondLightC.eot");
-  src: local("HeliosCondLightC"), url("HeliosCondLightC.eot?#iefix") format("embedded-opentype"), url("HeliosCondLightC.woff2") format("woff2"), url("HeliosCondLightC.woff") format("woff"), url("HeliosCondLightC.ttf") format("truetype");
+  src: url("./ui/fonts/Helios/HeliosCondLightC.eot");
+  src: local("./ui/fonts/Helios/HeliosCondLightC"), url("./ui/fonts/Helios/HeliosCondLightC.eot?#iefix") format("embedded-opentype"), url("./ui/fonts/Helios/HeliosCondLightC.woff2") format("woff2"), url("./ui/fonts/Helios/HeliosCondLightC.woff") format("woff"), url("./ui/fonts/Helios/HeliosCondLightC.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: "HeliosCond";
-  src: url("HeliosCondLightC-Italic.eot");
-  src: local("HeliosCondLightC Italic"), local("HeliosCondLightC-Italic"), url("HeliosCondLightC-Italic.eot?#iefix") format("embedded-opentype"), url("HeliosCondLightC-Italic.woff2") format("woff2"), url("HeliosCondLightC-Italic.woff") format("woff"), url("HeliosCondLightC-Italic.ttf") format("truetype");
+  src: url("./ui/fonts/Helios/HeliosCondLightC-Italic.eot");
+  src: local("./ui/fonts/Helios/HeliosCondLightC Italic"), local("./ui/fonts/Helios/HeliosCondLightC-Italic"), url("./ui/fonts/Helios/HeliosCondLightC-Italic.eot?#iefix") format("embedded-opentype"), url("./ui/fonts/Helios/HeliosCondLightC-Italic.woff2") format("woff2"), url("./ui/fonts/Helios/HeliosCondLightC-Italic.woff") format("woff"), url("./ui/fonts/Helios/HeliosCondLightC-Italic.ttf") format("truetype");
   font-weight: 300;
   font-style: italic;
 }
@@ -134,15 +134,15 @@ html {
 }
 @font-face {
   font-family: "HeliosCond";
-  src: url("HeliosCondC.eot");
-  src: local("HeliosCondC"), url("HeliosCondC.eot?#iefix") format("embedded-opentype"), url("HeliosCondC.woff2") format("woff2"), url("HeliosCondC.woff") format("woff"), url("HeliosCondC.ttf") format("truetype");
+  src: url("./ui/fonts/Helios/HeliosCondC.eot");
+  src: local("./ui/fonts/Helios/HeliosCondC"), url("./ui/fonts/Helios/HeliosCondC.eot?#iefix") format("embedded-opentype"), url("./ui/fonts/Helios/HeliosCondC.woff2") format("woff2"), url("./ui/fonts/Helios/HeliosCondC.woff") format("woff"), url("./ui/fonts/Helios/HeliosCondC.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "HeliosCond";
-  src: url("HeliosCondC-Italic.eot");
-  src: local("HeliosCondC Italic"), local("HeliosCondC-Italic"), url("HeliosCondC-Italic.eot?#iefix") format("embedded-opentype"), url("HeliosCondC-Italic.woff2") format("woff2"), url("HeliosCondC-Italic.woff") format("woff"), url("HeliosCondC-Italic.ttf") format("truetype");
+  src: url("./ui/fonts/Helios/HeliosCondC-Italic.eot");
+  src: local("./ui/fonts/Helios/HeliosCondC Italic"), local("./ui/fonts/Helios/HeliosCondC-Italic"), url("./ui/fonts/Helios/HeliosCondC-Italic.eot?#iefix") format("embedded-opentype"), url("./ui/fonts/Helios/HeliosCondC-Italic.woff2") format("woff2"), url("./ui/fonts/Helios/HeliosCondC-Italic.woff") format("woff"), url("./ui/fonts/Helios/HeliosCondC-Italic.ttf") format("truetype");
   font-weight: 400;
   font-style: italic;
 }
@@ -176,15 +176,15 @@ html {
 }
 @font-face {
   font-family: "HeliosCond";
-  src: url("HeliosCondC-Bold.eot");
-  src: local("HeliosCondC Bold"), local("HeliosCondC-Bold"), url("HeliosCondC-Bold.eot?#iefix") format("embedded-opentype"), url("HeliosCondC-Bold.woff2") format("woff2"), url("HeliosCondC-Bold.woff") format("woff"), url("HeliosCondC-Bold.ttf") format("truetype");
+  src: url("./ui/fonts/Helios/HeliosCondC-Bold.eot");
+  src: local("./ui/fonts/Helios/HeliosCondC Bold"), local("./ui/fonts/Helios/HeliosCondC-Bold"), url("./ui/fonts/Helios/HeliosCondC-Bold.eot?#iefix") format("embedded-opentype"), url("./ui/fonts/Helios/HeliosCondC-Bold.woff2") format("woff2"), url("./ui/fonts/Helios/HeliosCondC-Bold.woff") format("woff"), url("./ui/fonts/Helios/HeliosCondC-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
   font-family: "HeliosCond";
-  src: url("HeliosCondC-BoldItalic.eot");
-  src: local("HeliosCondC Bold Italic"), local("HeliosCondC-BoldItalic"), url("HeliosCondC-BoldItalic.eot?#iefix") format("embedded-opentype"), url("HeliosCondC-BoldItalic.woff2") format("woff2"), url("HeliosCondC-BoldItalic.woff") format("woff"), url("HeliosCondC-BoldItalic.ttf") format("truetype");
+  src: url("./ui/fonts/Helios/HeliosCondC-BoldItalic.eot");
+  src: local("./ui/fonts/Helios/HeliosCondC Bold Italic"), local("./ui/fonts/Helios/HeliosCondC-BoldItalic"), url("./ui/fonts/Helios/HeliosCondC-BoldItalic.eot?#iefix") format("embedded-opentype"), url("./ui/fonts/Helios/HeliosCondC-BoldItalic.woff2") format("woff2"), url("./ui/fonts/Helios/HeliosCondC-BoldItalic.woff") format("woff"), url("./ui/fonts/Helios/HeliosCondC-BoldItalic.ttf") format("truetype");
   font-weight: 700;
   font-style: italic;
 }
@@ -218,15 +218,15 @@ html {
 }
 @font-face {
   font-family: "HeliosCond";
-  src: url("HeliosCondBlackC.eot");
-  src: local("HeliosCondBlackC"), url("HeliosCondBlackC.eot?#iefix") format("embedded-opentype"), url("HeliosCondBlackC.woff2") format("woff2"), url("HeliosCondBlackC.woff") format("woff"), url("HeliosCondBlackC.ttf") format("truetype");
+  src: url("./ui/fonts/Helios/HeliosCondBlackC.eot");
+  src: local("./ui/fonts/Helios/HeliosCondBlackC"), url("./ui/fonts/Helios/HeliosCondBlackC.eot?#iefix") format("embedded-opentype"), url("./ui/fonts/Helios/HeliosCondBlackC.woff2") format("woff2"), url("./ui/fonts/Helios/HeliosCondBlackC.woff") format("woff"), url("./ui/fonts/Helios/HeliosCondBlackC.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
 @font-face {
   font-family: "HeliosCond";
-  src: url("HeliosCondBlackC-Italic.eot");
-  src: local("HeliosCondBlackC Italic"), local("HeliosCondBlackC-Italic"), url("HeliosCondBlackC-Italic.eot?#iefix") format("embedded-opentype"), url("HeliosCondBlackC-Italic.woff2") format("woff2"), url("HeliosCondBlackC-Italic.woff") format("woff"), url("HeliosCondBlackC-Italic.ttf") format("truetype");
+  src: url("./ui/fonts/Helios/HeliosCondBlackC-Italic.eot");
+  src: local("./ui/fonts/Helios/HeliosCondBlackC Italic"), local("./ui/fonts/Helios/HeliosCondBlackC-Italic"), url("./ui/fonts/Helios/HeliosCondBlackC-Italic.eot?#iefix") format("embedded-opentype"), url("./ui/fonts/Helios/HeliosCondBlackC-Italic.woff2") format("woff2"), url("./ui/fonts/Helios/HeliosCondBlackC-Italic.woff") format("woff"), url("./ui/fonts/Helios/HeliosCondBlackC-Italic.ttf") format("truetype");
   font-weight: 900;
   font-style: italic;
 }
