--- a/src/style/ui/fonts/Helios/_Helios.scss
+++ b/src/style/ui/fonts/Helios/_Helios.scss
@@ -242,6 +242,34 @@ $path: "./ui/fonts/Helios/";
   font-style: italic;
 }
 
+// 400 Compressed
+
+@font-face {
+    font-family: 'HeliosCompressed';
+    src: url('HeliosCompressedC.eot');
+    src: local('HeliosCompressedC'),
+        url('HeliosCompressedC.eot?#iefix') format('embedded-opentype'),
+        url('HeliosCompressedC.woff2') format('woff2'),
+        url('HeliosCompressedC.woff') format('woff'),
+        url('HeliosCompressedC.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+// 400 UltraCompressed
+
+@font-face {
+  font-family: 'HeliosUltraCompressed';
+  src: url('HeliosUltraCompressedC.eot');
+  src: local('HeliosUltraCompressedC'),
+      url('HeliosUltraCompressedC.eot?#iefix') format('embedded-opentype'),
+      url('HeliosUltraCompressedC.woff2') format('woff2'),
+      url('HeliosUltraCompressedC.woff') format('woff'),
+      url('HeliosUltraCompressedC.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
 
 
 
