--- a/src/style/index.css
+++ b/src/style/index.css
@@ -148,15 +148,15 @@ html {
 }
 @font-face {
   font-family: "HeliosCompressed";
-  src: url("HeliosCompressedC.eot");
-  src: local("HeliosCompressedC"), url("HeliosCompressedC.eot?#iefix") format("embedded-opentype"), url("HeliosCompressedC.woff2") format("woff2"), url("HeliosCompressedC.woff") format("woff"), url("HeliosCompressedC.ttf") format("truetype");
+  src: url("./ui/fonts/Helios/HeliosCompressedC.eot");
+  src: local("./ui/fonts/Helios/HeliosCompressedC"), url("./ui/fonts/Helios/HeliosCompressedC.eot?#iefix") format("embedded-opentype"), url("./ui/fonts/Helios/HeliosCompressedC.woff2") format("woff2"), url("./ui/fonts/Helios/HeliosCompressedC.woff") format("woff"), url("./ui/fonts/Helios/HeliosCompressedC.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "HeliosUltraCompressed";
-  src: url("HeliosUltraCompressedC.eot");
-  src: local("HeliosUltraCompressedC"), url("HeliosUltraCompressedC.eot?#iefix") format("embedded-opentype"), url("HeliosUltraCompressedC.woff2") format("woff2"), url("HeliosUltraCompressedC.woff") format("woff"), url("HeliosUltraCompressedC.ttf") format("truetype");
+  src: url("./ui/fonts/Helios/HeliosUltraCompressedC.eot");
+  src: local("./ui/fonts/Helios/HeliosUltraCompressedC"), url("./ui/fonts/Helios/HeliosUltraCompressedC.eot?#iefix") format("embedded-opentype"), url("./ui/fonts/Helios/HeliosUltraCompressedC.woff2") format("woff2"), url("./ui/fonts/Helios/HeliosUltraCompressedC.woff") format("woff"), url("./ui/fonts/Helios/HeliosUltraCompressedC.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
