--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -4,7 +4,7 @@ footer{
   a{ color: #fff; }
   ul.grid{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(min(20rem, 100%), 1fr));
     gap: 2rem;
     li{
       &.left{
