--- a/src/style/index.css
+++ b/src/style/index.css
@@ -496,12 +496,12 @@ footer ul.grid li.right {
   position: relative;
   background: #aaa;
   background-image: url("/public/assets/images/3D_Tour.jpg");
-  background-size: 100%;
+  background-size: 100% 100%;
   background-position: center;
   transition: 0.5s;
 }
 footer ul.grid li.right:hover {
-  background-size: 110%;
+  background-size: 110% 110%;
 }
 footer ul.grid li.right a {
   position: absolute;
