--- a/src/style/index.css
+++ b/src/style/index.css
@@ -19,7 +19,7 @@ html {
 
 .wrapper {
   max-width: var(--wrapper-max-width);
-  padding: var(--wrapper-padding);
+  padding: 5rem var(--wrapper-padding);
   margin-left: auto;
   margin-right: auto;
 }
