--- a/src/style/ui/_wrapper.scss
+++ b/src/style/ui/_wrapper.scss
@@ -7,7 +7,7 @@
 
 .wrapper{
   max-width: var(--wrapper-max-width);
-  padding: var(--wrapper-padding);
+  padding: 5rem var(--wrapper-padding);
   margin-left: auto;
   margin-right: auto;
 }
