--- a/src/style/components/_plan.scss
+++ b/src/style/components/_plan.scss
@@ -2,6 +2,7 @@ section.plan{
   .grid{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(20rem, 100%), 1fr));
+    gap: 2rem;
     .grid-item{
       display: flex;
       flex-flow: column;
