--- a/src/style/ui/_wrapper.scss
+++ b/src/style/ui/_wrapper.scss
@@ -1,6 +1,9 @@
 :root{
-  @media (max-width: 425px){
+  @media (max-width: 768px){
     --wrapper-padding: 2rem;
+  }
+  @media (min-width: 768px){
+    --wrapper-padding: 5rem;
   }
   --wrapper-max-width: calc(90rem + var(--wrapper-padding));
 }
