--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -5,16 +5,68 @@ header{
   transform: translateX(-50%);
   display: flex;
   justify-content: space-between;
+  gap: 1rem;
   padding-top: 2rem !important;
   padding-bottom: 2rem !important;
-  a{
-    color: #fff;
-    font-weight: 300;
-  }
   nav{
+    @media (max-width: 768px){
+      display: none;
+    }
     ul{
       display: flex;
-      gap: 2.5rem;
+      // gap: 1rem;
+      a{
+        color: #fff;
+        font-weight: 300;
+        white-space: nowrap;
+      }
+    }
+  }
+
+  .menuBtn{
+    @media (min-width: 768px){
+      display: none;
+    }
+    position: relative;
+    width: 2rem;
+    height: 2rem;
+    *{
+      position: absolute;
+      width: 100%;
+      height: 100%;
+    }
+    #menuBtn{
+      visibility: hidden;
+
+      &:checked{
+        & + label{
+          &::before{
+            transform: rotate(-45deg);
+          }
+          &::after{
+            transform: rotate(45deg);
+          }
+        }
+      }
+    }
+    label{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &::before, &::after{
+        content: '';
+        position: absolute;
+        height: .125rem;
+        width: 75%;
+        background: #fff;
+        transition: .15s;
+      }
+      &::before{
+        transform: translateY(-0.25rem);
+      }
+      &::after{
+        transform: translateY(0.25rem);
+      }
     }
   }
 }
