--- a/src/style/components/_qa.scss
+++ b/src/style/components/_qa.scss
@@ -24,6 +24,7 @@ section.qa{
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: .5rem;
         background: #D9D9D9;
         padding: 1.75rem;
         border-radius: .5rem;
@@ -31,6 +32,7 @@ section.qa{
           position: relative;
           width: 1rem;
           height: 1rem;
+          flex-shrink: 0;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -38,7 +40,7 @@ section.qa{
             position: absolute;
             content: '';
             width: 100%;
-            height: 10%;
+            height: .125rem;
             background: #000;
           }
           &::after{
