--- a/src/style/index.css
+++ b/src/style/index.css
@@ -11,9 +11,14 @@ html {
 :root {
   --wrapper-max-width: calc(90rem + var(--wrapper-padding));
 }
-@media (max-width: 425px) {
+@media (max-width: 768px) {
   :root {
     --wrapper-padding: 2rem;
+  }
+}
+@media (min-width: 768px) {
+  :root {
+    --wrapper-padding: 5rem;
   }
 }
 
@@ -284,16 +289,65 @@ header {
   transform: translateX(-50%);
   display: flex;
   justify-content: space-between;
+  gap: 1rem;
   padding-top: 2rem !important;
   padding-bottom: 2rem !important;
 }
-header a {
-  color: #fff;
-  font-weight: 300;
+@media (max-width: 768px) {
+  header nav {
+    display: none;
+  }
 }
 header nav ul {
   display: flex;
-  gap: 2.5rem;
+}
+header nav ul a {
+  color: #fff;
+  font-weight: 300;
+  white-space: nowrap;
+}
+header .menuBtn {
+  position: relative;
+  width: 2rem;
+  height: 2rem;
+}
+@media (min-width: 768px) {
+  header .menuBtn {
+    display: none;
+  }
+}
+header .menuBtn * {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+header .menuBtn #menuBtn {
+  visibility: hidden;
+}
+header .menuBtn #menuBtn:checked + label::before {
+  transform: rotate(-45deg);
+}
+header .menuBtn #menuBtn:checked + label::after {
+  transform: rotate(45deg);
+}
+header .menuBtn label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header .menuBtn label::before, header .menuBtn label::after {
+  content: "";
+  position: absolute;
+  height: 0.125rem;
+  width: 75%;
+  background: #fff;
+  transition: 0.15s;
+}
+header .menuBtn label::before {
+  transform: translateY(-0.25rem);
+}
+header .menuBtn label::after {
+  transform: translateY(0.25rem);
 }
 
 section.hero {
@@ -324,6 +378,7 @@ section.hero .wrapper .cont p {
 section.plan .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(20rem, 100%), 1fr));
+  gap: 2rem;
 }
 section.plan .grid .grid-item {
   display: flex;
@@ -388,6 +443,7 @@ section.qa ul li .question {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 0.5rem;
   background: #D9D9D9;
   padding: 1.75rem;
   border-radius: 0.5rem;
@@ -396,6 +452,7 @@ section.qa ul li .question .sign {
   position: relative;
   width: 1rem;
   height: 1rem;
+  flex-shrink: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -404,7 +461,7 @@ section.qa ul li .question .sign::before, section.qa ul li .question .sign::afte
   position: absolute;
   content: "";
   width: 100%;
-  height: 10%;
+  height: 0.125rem;
   background: #000;
 }
 section.qa ul li .question .sign::after {
@@ -422,6 +479,9 @@ section.qa ul li .answer {
   margin-top: -0.5rem;
 }
 
+section.signup {
+  display: none;
+}
 section.signup form {
   display: flex;
   flex-flow: column;
