--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -49,11 +49,11 @@ footer{
         position: relative;
         background: $neutral;
         background-image: url("/public/assets/images/3D_Tour.jpg");
-        background-size: 100% 100%;
+        background-size: 100% auto;
         background-position: center;
         transition: .5s;
         &:hover{
-          background-size: 110% 110%;
+          background-size: 110% auto;
         }
         a{
           position: absolute;
@@ -63,6 +63,7 @@ footer{
           background: #0000008e;
           font-weight: 700;
           font-size: 1.5rem;
+          backdrop-filter: blur(2px);
         }
       }
     }
