--- a/src/style/index.css
+++ b/src/style/index.css
@@ -378,7 +378,7 @@ section.hero .wrapper .cont p {
 section.plan .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(20rem, 100%), 1fr));
-  gap: 2rem;
+  gap: 4rem 2rem;
 }
 section.plan .grid .grid-item {
   display: flex;
