--- a/src/style/index.css
+++ b/src/style/index.css
@@ -288,10 +288,23 @@ header {
   left: 50%;
   transform: translateX(-50%);
   display: flex;
+  align-items: center;
   justify-content: space-between;
   gap: 1rem;
-  padding-top: 2rem !important;
-  padding-bottom: 2rem !important;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+}
+header .logo {
+  width: 10rem;
+  height: 10rem;
+  background: url("/public/assets/images/logo.png");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+header nav {
+  display: flex;
+  align-items: center;
 }
 @media (max-width: 768px) {
   header nav {
@@ -308,8 +321,8 @@ header nav ul a {
 }
 header .menuBtn {
   position: relative;
-  width: 2rem;
-  height: 2rem;
+  width: 3rem;
+  height: 3rem;
 }
 @media (min-width: 768px) {
   header .menuBtn {
@@ -331,6 +344,7 @@ header .menuBtn #menuBtn:checked + label::after {
   transform: rotate(45deg);
 }
 header .menuBtn label {
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -339,15 +353,15 @@ header .menuBtn label::before, header .menuBtn label::after {
   content: "";
   position: absolute;
   height: 0.125rem;
-  width: 75%;
+  width: 60%;
   background: #fff;
   transition: 0.15s;
 }
 header .menuBtn label::before {
-  transform: translateY(-0.25rem);
+  transform: translateY(-0.3rem);
 }
 header .menuBtn label::after {
-  transform: translateY(0.25rem);
+  transform: translateY(0.3rem);
 }
 
 section.hero {
