--- a/src/style/components/_qa.scss
+++ b/src/style/components/_qa.scss
@@ -6,17 +6,10 @@ section.qa{
     li{
       &.hidden{
         .question{
-          .sign{
-            &::after{
-              display: block;
-            }
-          }
+          border-radius: .5rem;
+          .sign::after{ display: block; }
         }
-        .answer{
-          height: 0;
-          padding-top: 0;
-          padding-bottom: 0;
-        }
+        .answer{ display: none; }
       }
       .question{
         cursor: pointer;
@@ -27,7 +20,8 @@ section.qa{
         gap: .5rem;
         background: #D9D9D9;
         padding: 1.75rem;
-        border-radius: .5rem;
+        border-top-left-radius: .5rem;
+        border-top-right-radius: .5rem;
         .sign{
           position: relative;
           width: 1rem;
