--- a/src/style/index.css
+++ b/src/style/index.css
@@ -442,13 +442,14 @@ section.qa ul {
   flex-flow: column;
   gap: 1rem;
 }
+section.qa ul li.hidden .question {
+  border-radius: 0.5rem;
+}
 section.qa ul li.hidden .question .sign::after {
   display: block;
 }
 section.qa ul li.hidden .answer {
-  height: 0;
-  padding-top: 0;
-  padding-bottom: 0;
+  display: none;
 }
 section.qa ul li .question {
   cursor: pointer;
@@ -459,7 +460,8 @@ section.qa ul li .question {
   gap: 0.5rem;
   background: #D9D9D9;
   padding: 1.75rem;
-  border-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 section.qa ul li .question .sign {
   position: relative;
