--- a/src/style/components/_qa.scss
+++ b/src/style/components/_qa.scss
@@ -47,11 +47,10 @@ section.qa{
         overflow: hidden;
         line-height: 1.5;
         background: #F7F7F7;
-        border: .0625rem solid lightgrey;
-        border-top: .5rem solid lightgrey;
+        border: .0625rem solid #D9D9D9;
+        border-top: none;
         border-radius: 0 0 .5rem .5rem;
         padding: 1.75rem;
-        margin-top: -0.5rem;
       }
     }
   }
