--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -9,50 +9,25 @@ header{
     padding-top: 0 !important;
     padding-bottom: 0 !important;
     .logo{
+      position: relative;
+      z-index: 1000;
       width: 10rem;
       height: 10rem;
       background: url('/public/assets/images/logo.png');
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
-    }
-    nav{
-      @media (max-width: 768px){
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        height: 100vh;
-        flex-flow: column;
-        background: #fff;
-      }
-      display: flex;
-      align-items: center;
-      ul{
-        @media (max-width: 768px){
-          flex-flow: column;
-        }
-        display: flex;
-        // gap: 1rem;
-        li{
-          a{
-            @media (max-width: 768px){
-              color: #000;
-            }
-            color: #fff;
-            font-weight: 300;
-            white-space: nowrap;
-          }
-        }
+      transition: .15s;
+      &.black{
+        filter: invert(1);
       }
     }
-  
     .menuBtn{
       @media (min-width: 768px){
         display: none;
       }
       position: relative;
+      z-index: 1000;
       width: 3rem;
       height: 3rem;
       *{
@@ -65,6 +40,9 @@ header{
   
         &:checked{
           & + label{
+            &::before, &::after{
+              background: #000;
+            }
             &::before{
               transform: rotate(-45deg);
             }
@@ -92,6 +70,49 @@ header{
         }
         &::after{
           transform: translateY(0.3rem);
+        }
+      }
+    }
+    nav{
+      @media (max-width: 768px){
+        gap: 2rem;
+        &.hidden{
+          pointer-events: none;
+          opacity: 0;
+        }
+        position: fixed;
+        z-index: 999;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 100vh;
+        flex-flow: column;
+        justify-content: center;
+        background: #fff;
+        transition: .15s;
+      }
+      display: flex;
+      align-items: center;
+      ul{
+        @media (max-width: 768px){
+          gap: 1rem;
+          &:nth-child(1){
+            flex-flow: column;
+          }
+        }
+        display: flex;
+        // gap: 1rem;
+        li{
+          a{
+            @media (max-width: 768px){
+              color: #000;
+              font-size: 1.5rem;
+              font-weight: 700;
+            }
+            color: #fff;
+            font-weight: 300;
+            white-space: nowrap;
+          }
         }
       }
     }
