--- a/src/style/index.css
+++ b/src/style/index.css
@@ -295,49 +295,22 @@ header .wrapper {
   padding-bottom: 0 !important;
 }
 header .wrapper .logo {
+  position: relative;
+  z-index: 1000;
   width: 10rem;
   height: 10rem;
   background: url("/public/assets/images/logo.png");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+  transition: 0.15s;
 }
-header .wrapper nav {
-  display: flex;
-  align-items: center;
-}
-@media (max-width: 768px) {
-  header .wrapper nav {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100vh;
-    flex-flow: column;
-    background: #fff;
-  }
-}
-header .wrapper nav ul {
-  display: flex;
-}
-@media (max-width: 768px) {
-  header .wrapper nav ul {
-    flex-flow: column;
-  }
-}
-header .wrapper nav ul li a {
-  color: #fff;
-  font-weight: 300;
-  white-space: nowrap;
-}
-@media (max-width: 768px) {
-  header .wrapper nav ul li a {
-    color: #000;
-  }
+header .wrapper .logo.black {
+  filter: invert(1);
 }
 header .wrapper .menuBtn {
   position: relative;
+  z-index: 1000;
   width: 3rem;
   height: 3rem;
 }
@@ -353,6 +326,9 @@ header .wrapper .menuBtn * {
 }
 header .wrapper .menuBtn #menuBtn {
   visibility: hidden;
+}
+header .wrapper .menuBtn #menuBtn:checked + label::before, header .wrapper .menuBtn #menuBtn:checked + label::after {
+  background: #000;
 }
 header .wrapper .menuBtn #menuBtn:checked + label::before {
   transform: rotate(-45deg);
@@ -379,6 +355,52 @@ header .wrapper .menuBtn label::before {
 }
 header .wrapper .menuBtn label::after {
   transform: translateY(0.3rem);
+}
+header .wrapper nav {
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  header .wrapper nav {
+    gap: 2rem;
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100vh;
+    flex-flow: column;
+    justify-content: center;
+    background: #fff;
+    transition: 0.15s;
+  }
+  header .wrapper nav.hidden {
+    pointer-events: none;
+    opacity: 0;
+  }
+}
+header .wrapper nav ul {
+  display: flex;
+}
+@media (max-width: 768px) {
+  header .wrapper nav ul {
+    gap: 1rem;
+  }
+  header .wrapper nav ul:nth-child(1) {
+    flex-flow: column;
+  }
+}
+header .wrapper nav ul li a {
+  color: #fff;
+  font-weight: 300;
+  white-space: nowrap;
+}
+@media (max-width: 768px) {
+  header .wrapper nav ul li a {
+    color: #000;
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
 }
 
 section.hero {
