--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -2,13 +2,16 @@ header{
   position: absolute;
   width: 100%;
   .wrapper{
+    @media (max-width: 1023px){
+      justify-content: space-between;
+    }
     display: flex;
     align-items: center;
-    justify-content: space-between;
     gap: 1rem;
     padding-top: 0 !important;
     padding-bottom: 0 !important;
     .logo{
+      flex-shrink: 0;
       position: relative;
       z-index: 1000;
       width: 10rem;
@@ -23,7 +26,7 @@ header{
       }
     }
     .menuBtn{
-      @media (min-width: 768px){
+      @media (min-width: 1024px){
         display: none;
       }
       position: relative;
@@ -74,7 +77,7 @@ header{
       }
     }
     nav{
-      @media (max-width: 768px){
+      @media (max-width: 1023px){
         gap: 2rem;
         &.hidden{
           pointer-events: none;
@@ -91,20 +94,29 @@ header{
         background: #fff;
         transition: .15s;
       }
+      @media (min-width: 1024px){
+        width: 100%;
+        justify-content: space-between;
+      }
       display: flex;
       align-items: center;
       ul{
-        @media (max-width: 768px){
-          gap: 1rem;
-          &:nth-child(1){
+        @media (max-width: 1023px){
+          &:nth-child(1){ display: none; }
+          &:nth-child(2){
+            gap: 1rem;
             flex-flow: column;
           }
         }
+        @media (min-width: 1024px){
+          &:nth-child(2){
+            gap: 2rem;
+          }
+        }
         display: flex;
-        // gap: 1rem;
         li{
           a{
-            @media (max-width: 768px){
+            @media (max-width: 1023px){
               color: #000;
               font-size: 1.5rem;
               font-weight: 700;
